Fixed today grid layout bug

--- a/src/styles/today.css
+++ b/src/styles/today.css
@@ -49,23 +49,26 @@
 }
 
 .today-analysis-data .analysis-list{
-    display: block;
     width: 100%;
-    column-count: 3;
-    column-gap: 1.3em;
+    display: grid;
+    grid-gap: 1.7em;
+    grid-template-columns: repeat(auto-fill, minmax(200px,26vw));
     margin-left: 90px;
     margin-right: 90px;
     margin-bottom: 60px;
+    transform: translateZ(0);
 }
 
 .today-analysis-data .analysis-list .analysis-item{
     position: relative;
-    display: inline-flex;
-    margin-bottom: 1.3em;
-    height: auto;
-    overflow: hidden;
+    break-inside: avoid;
+    -webkit-column-break-inside: avoid;
+    height: 70vh;
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
     transition: all 200ms ease;
     box-shadow: 0 0 30px rgba(0,0,0,0.1);
+    transform: translateZ(0);
 }
 
 .today-analysis-data .analysis-list .analysis-item .item-wrapper{
